Bug 357142 - "Save & Exit" is a UX pessimization
Summary: "Save & Exit" is a UX pessimization
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-25 09:52 UTC by Szczepan Hołyszewski
Modified: 2016-04-25 22:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Szczepan Hołyszewski 2015-12-25 09:52:51 UTC
When you neither ask the user where to save the screenshot nor tell them where you saved it, then the correct therm is "lost", not "saved".

Please don't be goddamn Firefox. Please *do ask* the user where to save the file, or *at the very least* post a system notification telling the user where the file was saved. Not even knowing the *filename*, searching for that saved screenshot (without success!) took me so long that the time spent posting this bug report is negligible in comparison.

Reproducible: Always

Steps to Reproduce:
1. Make a screenshot with Spectacle
2. Use "Save & Exit"


Actual Results:  
Spectacle *loses* the screenshot someplace only it knows about, and exits immediately.

Expected Results:  
Spectacle should *save* the screenshot in either specifiable or immediately made-known location.

I expected "Save & Exit" to differ from "Save As..." *only* by sparing me the extra click to exit Spectacle, *not* by substituting the semantics of "lose" for that of "save".
Comment 1 Boudhayan Gupta 2015-12-25 10:23:38 UTC
If you've seen the drop down menu that appears when you click the arrow beside Save & Exit, you'll see an option "Configure Save Options" that allows you to set the location and filename pattern. This  is documented in the handbook.

That said, no one actually reads the handbook, so I'll resolve this by popping up a notification when the Save & Exit button is used, and changing the tooltip to point users to the Configure Save Options dialog.
Comment 2 Szczepan Hołyszewski 2016-01-04 04:37:29 UTC
Great, thanks! Notifications are a good thing, they should be used a bit more.
Comment 3 Boudhayan Gupta 2016-04-25 22:47:52 UTC
Git commit 87392e091b2b8089a5f60bd737c52cc101c719ef by Boudhayan Gupta.
Committed on 25/04/2016 at 22:47.
Pushed by bgupta into branch 'master'.

Add notification with save path on Save and Quit
FIXED-IN: 16.08

M  +4    -1    src/ExportManager.cpp
M  +2    -1    src/ExportManager.h
M  +3    -2    src/Gui/KSMainWindow.cpp
M  +1    -1    src/SpectacleCore.cpp

http://commits.kde.org/kscreengenie/87392e091b2b8089a5f60bd737c52cc101c719ef
Comment 4 Boudhayan Gupta 2016-04-25 22:48:49 UTC
Apologies for taking so long to fix such a simple issue - I had completely forgotten about this.