Add notification with save path on Save and Quit

BUG: 357142
FIXED-IN: 16.08